// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabGroup renders correctly 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-4 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class=" emotion-2 emotion-3"
      role="tablist"
    />
    <div
      class="emotion-4 emotion-5"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-4:hover,
.emotion-4:active,
.emotion-4:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-selected='true'] {
  color: #4f0599;
}

.emotion-4[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4[aria-disabled='true']:hover,
.emotion-4[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-10 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class=" emotion-2 emotion-3"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        Second
      </span>
      <span
        aria-disabled="true"
        aria-selected="true"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="emotion-10 emotion-11"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-4:hover,
.emotion-4:active,
.emotion-4:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-selected='true'] {
  color: #4f0599;
}

.emotion-4[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4[aria-disabled='true']:hover,
.emotion-4[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-10 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class=" emotion-2 emotion-3"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-label="first"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-label="second"
        aria-selected="true"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        Second
      </span>
      <span
        aria-disabled="true"
        aria-label="three"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="emotion-10 emotion-11"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-4:hover,
.emotion-4:active,
.emotion-4:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-selected='true'] {
  color: #4f0599;
}

.emotion-4[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4[aria-disabled='true']:hover,
.emotion-4[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-10 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class=" emotion-2 emotion-3"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-selected="true"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        Second
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="emotion-10 emotion-11"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-4:hover,
.emotion-4:active,
.emotion-4:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-selected='true'] {
  color: #4f0599;
}

.emotion-4[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4[aria-disabled='true']:hover,
.emotion-4[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-9:hover,
.emotion-9:active,
.emotion-9:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9[aria-selected='true'] {
  color: #4f0599;
}

.emotion-9[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-9[aria-disabled='true']:hover,
.emotion-9[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-11 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class=" emotion-2 emotion-3"
      role="tablist"
    >
      <div
        aria-disabled="false"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        First
      </div>
      <a
        aria-disabled="false"
        aria-selected="false"
        class="emotion-4 emotion-5"
        role="tab"
        tabindex="0"
      >
        Second
      </a>
      <div
        aria-disabled="true"
        aria-selected="false"
        class="emotion-5 emotion-9 emotion-1"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </div>
    </div>
    <div
      class="emotion-11 emotion-12"
      style="left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with variant default 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-4 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0 emotion-1"
    variant="default"
  >
    <div
      class=" emotion-2 emotion-3"
      role="tablist"
    />
    <div
      class="emotion-4 emotion-5"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;
